--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,15 +1,4 @@
-<summary-stats></summary-stats>
-<div class="row">
-    <div class="col-md-12 offset-md-1">
-        <div class="alert alert-info">
-            <p> Now you can view and verify contract source code (<a href="/addr/0x40ebf2d6e998a76a848c41908733b26e04adffe2#tab_addr_3">example</a>). For more info about our progress check out
-                <a href="https://github.com/ethereumproject/explorer" target="_blank"> the official github respository</a>. 
-            </p><br>
-            <p>This block explorer is hosted by <a href="http://etc.minertopia.org" target="_blank">etc.minertopia.org</a>
-            </p>
-        </div>
-    </div>
-</div>
+<!-- <summary-stats></summary-stats> -->
 
 <div class="row">
     <div class="col-md-6 col-sm-6">
@@ -17,8 +6,8 @@
         <div class="portlet light">
             <div class="portlet-title">
                 <div class="caption caption-md">
-                    <i class="fa fa-cubes font-red"></i>
-                    <span class="caption-subject font-red bold uppercase">Blocks</span>
+                    <i class="fa fa-cubes color-smilo"></i>
+                    <span class="caption-subject color-smilo bold uppercase">Blocks</span>
                 </div>
                 <div class="actions">
                     <div class="btn-group">
@@ -53,8 +42,8 @@
         <div class="portlet light">
             <div class="portlet-title">
                 <div class="caption caption-md">
-                    <i class="icon-bar-chart font-red"></i>
-                    <span class="caption-subject font-red bold uppercase">Transactions</span>
+                    <i class="icon-bar-chart color-smilo"></i>
+                    <span class="caption-subject color-smilo bold uppercase">Transactions</span>
                 </div>
                 <div class="actions">
                     <div class="btn-group">
