--- a/public/views/summary-stats.html
+++ b/public/views/summary-stats.html
@@ -83,7 +83,7 @@
                         <small class="font-purple-soft">$</small>
                         <span data-counter="counterup" data-value="{{stats.usdEth}}">{{stats.usdEth}}</span>
                     </h3>
-                    <small>ETH PRICE</small>
+                    <small>SMILO PRICE</small>
                 </div>
                 <div class="icon">
                     <i class="icon-trash"></i>
