--- a/public/views/address.html
+++ b/public/views/address.html
@@ -11,11 +11,11 @@
                 <span class="eth-stat-title">
                   {{ addr.balance | number: 10 }} </span><br>
                 <span class="eth-stat-text">
-                  ETC Balance <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="right" title="Note: Balance may not reflect transaction data if you have transactions resulting from Contract Internal Transactions. We are working on adding that functionality."></i>
-                  </span><br> 
+                  Smilo balance
+                </span><br> 
                   <div class="margin-top-20">
-                  <span class="fade">{{ addr.ethfiat | number: 10 }}</span> <span class="eth-stat-text fade">ETH-F balance
-                  </span> <a href="http://etherscan.io/address/{{addrHash}}" target="_blank"><i class="fa fa-external-link"></i></a>
+                  <!-- <span class="fade">{{ addr.ethfiat | number: 10 }}</span> <span class="eth-stat-text fade">Smilo balance
+                  </span> <a href="http://etherscan.io/address/{{addrHash}}" target="_blank"><i class="fa fa-external-link"></i></a> -->
                   </div>
                   <div class="margin-top-20">
                   0 <span class="eth-stat-text">Mined</span>
@@ -23,20 +23,6 @@
                   <div class="margin-top-20">
                   {{ addr.count }} <span class="eth-stat-text">Transactions</span>
                   </div>
-              </div>
-            </div>
-
-            <div class="col-md-6 center">
-                <div class="portlet">
-                  <div class="portlet-body">
-
-                    <span class='btn blue-madison' ng-show="!isFollowing(addrHash)" ng-click="follow(addrHash)">WATCH <i class="fa fa-rss "></i></span>
-                    <span class='btn grey'  ng-show="isFollowing(addrHash)" ng-click="unFollow(addrHash)">WATCHING <i class="fa fa-check "></i></span>
-                    <div class="margin-top-20">
-                        {{ addr.follow_count }}0 
-                        <span class="eth-stat-text">WATCHING</span>
-                    </div>
-                </div>
               </div>
             </div>
 
@@ -69,7 +55,7 @@
                           <th width="8%"> Block </th>
                           <th width="15%"> From </th>
                           <th width="15%"> To </th>
-                          <th width="10%"> ETC </th>
+                          <th width="10%"> Smilo </th>
                           <th width="0%"> gas </th>
                           <th width="12%"> Age </th>
                       </tr>
@@ -85,7 +71,7 @@
                         <th width="8%"> Block </th>
                         <th width="15%"> From </th>
                         <th width="15%"> To </th>
-                        <th width="10%"> ETC </th>
+                        <th width="10%"> Smilo </th>
                         <th width="0%"> gas </th>
                         <th></th>
                     </tr>
