--- a/views/test.ejs
+++ b/views/test.ejs
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <!-- skin -->
     <link rel="stylesheet" href="/css/default.css">
-    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png">
   </head>
    
   <body>
