Added Telegram placeholder and removed Ether mentions

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -136,6 +136,10 @@ li.ng-scope {
     background: url(../img/social/medium.png) no-repeat;
 }
 
+.telegram {
+    background: url(../img/social/telegram.png) no-repeat;
+}
+
 .color-smilo {
     color: #032b3f;
 }
