--- a/public/views/home.html
+++ b/public/views/home.html
@@ -26,9 +26,8 @@
                                 <i class="fa fa-hourglass-o"></i>{{t.timestamp | timeDuration }} ago</span>
                         </div>
                         <div class="todo-tasklist-controls col-sm-7">
-                            <div class="todo-tasklist-item-text"><a href="/addr/{{t.miner}}">{{t.extraData}}</a><br>
-                            by <a href="/addr/{{t.miner}}">{{t.miner}}</a><br>
-                            {{t.transactions.length}} txns
+                            <div class="todo-tasklist-item-text">
+                            {{t.transactions ? t.transactions.length : 0 }} txns
                             </div>
                         </div>
                     </div>
@@ -64,7 +63,7 @@
                     <div class="todo-tasklist-controls"> 
                       <span class="todo-tasklist-item-text">From <a href="/addr/{{t.from}}">{{t.from.substr(0,24)}}...</a></span> 
                       <span class="todo-tasklist-item-text">To <a href="/addr/{{t.to}}">{{t.to.substr(0,24)}}...</a></span><br>
-                      <div class="todo-tasklist-item-text" style="margin-top:4px;">{{t.value}} Smilo</div>
+                      <div class="todo-tasklist-item-text" style="margin-top:4px;">{{t.value}} XSM</div>
                     </div>
                 </div>
 
