--- a/public/views/token.html
+++ b/public/views/token.html
@@ -8,7 +8,7 @@
                 <span class="eth-stat-title">
                   {{ token.balance | number: 10 }} </span><br>
                 <span class="eth-stat-text">
-                  {{ token.name }} Address Balance (Smilo)
+                  {{ token.name }} Address Balance (XSM)
                   </span><br> 
                   <div class="margin-top-20">
                   {{ token.total_supply | number:1 }} <span class="eth-stat-text">Total {{ token.symbol }} Tokens</span>
