Added transactions to grabber and screen

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="todo-tasklist-controls col-sm-7">
                             <div class="todo-tasklist-item-text">
-                            {{t.transactions ? t.transactions.length : 0 }} txns
+                            {{t.txCount}} txns
                             </div>
                         </div>
                     </div>
