Added miner and fixed txCount on blocks

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -27,7 +27,8 @@
                         </div>
                         <div class="todo-tasklist-controls col-sm-7">
                             <div class="todo-tasklist-item-text">
-                            {{t.txCount}} txns
+                                Mined by <a href="/addr/{{t.miner}}">{{t.miner}}</a><br>
+                                {{ t.txCount }} txns
                             </div>
                         </div>
                     </div>
