--- a/public/views/dao.html
+++ b/public/views/dao.html
@@ -62,9 +62,9 @@
               <li ng-class="{active: activeTab == 'tab_dao_2'}" >
                   <a href="#tab_dao_2" data-toggle="tab" aria-expanded="false"> Created Tokens </a>
               </li>
-              <li cng-class="{active: activeTab == 'tab_dao_3'}">
+              <!-- <li cng-class="{active: activeTab == 'tab_dao_3'}">
                   <a href="#tab_dao_3" data-toggle="tab" aria-expanded="false"> Internal Transactions </a>
-              </li>
+              </li> -->
           </ul>
           <div class="tab-content">
             <div class="tab-pane" ng-class="{active: activeTab == 'tab_dao_1' || !activeTab}" id="tab_dao_1">
