--- a/public/views/tx.html
+++ b/public/views/tx.html
@@ -25,7 +25,7 @@
           <tr ><td width="25%">Input Data</td><td><pre class="code">{{tx.input}}</pre></td></tr>
         </table>
 
-        <table class="table table-condensed" ng-show="tx.isTrace">
+        <!-- <table class="table table-condensed" ng-show="tx.isTrace">
           <thead>
               <tr>
                   <th> From </th>
@@ -46,7 +46,7 @@
                   <td style="text-align:center"><span class="label label-sm label-info {{t.type}}"> {{t.type}}</span><span class="label label-sm label-danger" ng-show="t.error"> {{t.error}}</span></td>
               </tr>
           </tbody>
-        </table>
+        </table> -->
     </div>
 
   </div>
