--- a/views/test.ejs
+++ b/views/test.ejs
@@ -54,7 +54,7 @@
     <input id="block_in" class="form-control" type = "text" placeholder = "Block Number: eg. 192000">
     <button href="#services" class="form-control button" id="block_btn" type="submit">Search Block</button>
     </form><br>
-    <p><a style="color:#fff;">Sorry this is so ugly, it's a temporary page until I get something better put up. If you do frontend stuff and want to help, email elaine.ou@gmail.com.</a></p>
+    <p><a style="color:#fff;">Sorry this is so ugly, it's a temporary page until I get something better put up. If you do frontend stuff and want to help, email info@smilo.io.</a></p>
             </div>
           </div>
         </div>
