--- a/public/views/address.html
+++ b/public/views/address.html
@@ -22,6 +22,9 @@
             <div class="margin-top-20">
               {{ addr.count }} <span class="eth-stat-text">Transactions</span>
             </div>
+            <div class="margin-top-20">
+              {{ addr.internalCount }} <span class="eth-stat-text">Internal Transactions</span>
+            </div>
           </div>
         </div>
         <div class="col-md-6 center">
@@ -49,9 +52,9 @@
           <li ng-class="{active: activeTab == 'tab_addr_1' || !activeTab}" ng-click="changeActiveTab(1);">
             <a href="#tab_addr_1" data-toggle="tab" aria-expanded="true"> Transactions </a>
           </li>
-          <!-- <li  ng-class="{active: activeTab == 'tab_addr_2'}" ng-show="addr.isContract" ng-click="changeActiveTab(2);">
+          <li  ng-class="{active: activeTab == 'tab_addr_2'}" ng-click="changeActiveTab(2);">
             <a href="#tab_addr_2" data-toggle="tab" aria-expanded="false"> Internal Transactions </a>
-          </li> -->
+          </li>
           <li class="" ng-show="addr.isContract" ng-class="{active: activeTab == 'tab_addr_3'}" ng-click="changeActiveTab(3);">
             <a href="#tab_addr_3" data-toggle="tab" aria-expanded="false"> Contract Source </a>
           </li>
@@ -78,30 +81,20 @@
             </table>
           </div>
           <!-- End: Datatable tab -->
-          <div class="tab-pane" id="tab_addr_2" ng-show="addr.isContract" ng-class="{active: activeTab == 'tab_addr_2'}">
-            <table class="table table-condensed" ng-show="addr.isContract">
+          <div class="tab-pane" id="tab_addr_2" ng-class="{active: activeTab == 'tab_addr_2'}">
+            <table class="table table-striped table-hover" id="table_internal_txs" style="table-layout:fixed;width: 98% !important;">
               <thead>
-                <tr>
+                <tr role="row" class="heading">
                   <th width="15%"> TxHash </th>
                   <th width="8%"> Block </th>
                   <th width="15%"> From </th>
                   <th width="15%"> To </th>
                   <th width="10%"> {{ settings.symbol }} </th>
                   <th width="0%"> gas </th>
-                  <th></th>
+                  <th width="12%"> Age </th>
                 </tr>
               </thead>
-              <tbody>
-                <tr ng-repeat="t in internal_transactions track by $index">
-                  <td class="truncate-txhash"> <a href="/tx/{{t.transactionHash}}">{{t.transactionHash}}</a> </td>
-                  <td style="text-align:right"><a href="/block/{{t.blockNumber}}">{{t.blockNumber}}</a>
-                  <td class="truncate-addrhash"> <a href="/addr/{{t.from}}">{{t.from}}</a> </td>
-                  <td class="truncate-addrhash"> <a href="/addr/{{t.to}}">{{t.to}}</a> </td>
-                  <td style="text-align:right"> {{t.value}} </td>
-                  <td style="text-align:right"> {{t.gas}} </td>
-                  <td style="text-align:center"><span class="label label-sm label-info {{t.type}}"> {{t.type}}</span><span class="label label-sm label-danger" ng-show="t.error"> {{t.error}}</span></td>
-                </tr>
-              </tbody>
+              <tbody></tbody>
             </table>
           </div>
           <div class="tab-pane table-container" ng-show="activeTab == 'tab_addr_4'" ng-class="{active: activeTab == 'tab_addr_4' || !activeTab}" id="tab_addr_4">
