--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,9 @@
         <meta content="<%= settings.author %>" name="author" />
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
 
+        <!-- WEB3 -->
+        <script src="/js/web3.min.js" type="text/javascript"></script>
+
         <base href="/">
         <!-- BEGIN GLOBAL MANDATORY STYLES -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
