--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -221,3 +221,13 @@ li.ng-scope {
 tr {
     word-break: break-all;
 }
+.claim-value {
+    color: #f4623a;
+    font-size: 13px;
+    font-weight: 800;
+    margin-top: 2px;
+}
+.claim-title {
+    margin-bottom: 0;
+    padding-bottom: 2px;
+}
