--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -231,3 +231,79 @@ tr {
     margin-bottom: 0;
     padding-bottom: 2px;
 }
+.proof-div {
+    padding: 12px;
+    border: 2px solid black;
+    margin-bottom: 12px;
+}
+.proof-header-div {
+    display: flex;
+    margin-bottom: 12px;
+}
+.proof-header-div img {
+    width: 200px;
+}
+.header-bar {
+    width: 2px;
+    margin-left: 11px;
+    background: black;
+}
+.proof-sub-info-div {
+    display: flex;
+    border-top: 2px solid black;
+    word-break: break-all;
+}
+.proof-sub-info-div p {
+    margin-bottom: 8px;
+    margin-top: 0;
+}
+.proof-div-66 {
+    padding-right: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    width: 66%;
+    border-right: 2px solid black;
+}
+.proof-div-34 {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    width: 34%;
+}
+.proof-div-50 {
+    padding-right: 12px;
+    width: 50%;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+.sub-title {
+    font-size: 12px;
+    margin-bottom: 4px;
+    font-weight: 200;
+}
+.padding-left {
+    padding-left: 8px;
+}
+.txhash {
+    color: #006599;
+}
+.border-right {
+    border-right: 2px solid black !important;
+}
+.proof-content {
+    word-break: break-all;
+    border-top: 2px solid black;
+}
+.proof-content-div {
+    margin-top: 12px;
+    background-color:#f3f3fb;
+    padding: 16px;
+}
+.bold {
+    font-weight: 500;
+}
+.proofme-text-header {
+    color: #006599;
+    letter-spacing: 3px;
+    margin-top: 22px;
+    padding-left: 18px;
+}
