--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
 
         <!-- WEB3 -->
         <script src="/js/web3.min.js" type="text/javascript"></script>
+        <script src="/js/qrcode.min.js" type="text/javascript"></script>
 
         <base href="/">
         <!-- BEGIN GLOBAL MANDATORY STYLES -->
