--- a/public/views/claim.html
+++ b/public/views/claim.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="proof-sub-info-div flex-sub-section">
-                <div class="proof-div-66">
+                <div class="proof-div-66-sub">
                     <div class="border-bottom">
                         <p class="sub-title">Proof</p>
                         <p class="bold padding-right">{{ dataParsed.proof }}</p>
